--- a/Prestige.html
+++ b/Prestige.html
@@ -5,7 +5,7 @@
 <head>
 
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="css/WorldWide.css">
+    <link rel="stylesheet" href="css/worldwide.css">
     <title>website</title>
 
 </head>
