added title and read me

--- a/prestige.html
+++ b/prestige.html
@@ -6,7 +6,7 @@
 
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="css/worldwide.css">
-    <title>website</title>
+    <title>Horiseon</title>
 
 </head>
 
