--- a/prestige.html
+++ b/prestige.html
@@ -39,7 +39,7 @@
     <div class="hero"></div>
     <div class="content">
     <div class="search-engine-optimization">
-    <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+    <img src="./images/" class="float-left" />
            
     <h2>Search Engine Optimization</h2>
     
