--- a/prestige.html
+++ b/prestige.html
@@ -15,30 +15,25 @@
     <header>       
         <h1>Hori<span class="seo">seo</span>n</h1>
  
-<div>
+<nav>
     <ul>
         <li>
              <a href="#search-engine-optimization">Search Engine Optimization</a>
         </li>
-
         <li>
              <a href="#online-reputation-management">Online Reputation Management</a>
         </li>
-
         <li>
              <a href="#social-media-marketing">Social Media Marketing</a>
         </li>
-
     </ul>
-
-</div>
-
-    </header>
+</nav>
+</header>
 
     <div class="hero"></div>
     <div class="content">
     <div class="search-engine-optimization">
-    <img src="./images/search-engine-optimization.jpg" class="float-left" />
+    <img src="./images/search-engine-optimization.jpg" class="float-left" alt="" />
            
     <h2>Search Engine Optimization</h2>
     
