--- a/prestige.html
+++ b/prestige.html
@@ -6,7 +6,8 @@
 
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="css/worldwide.css">
-    
+    <link rel="stylesheet" href="https://javiistacks.github.io/prestigeworldwide/">
+
     <title>Horiseon</title>
 
 </head>
